fix h2 border bottom in dark mode

--- a/src/assets/css/components/headings.css
+++ b/src/assets/css/components/headings.css
@@ -7,5 +7,5 @@
 
 .h2--border {
 	@apply border-b;
-	@apply border-black;
+	border-color: var(--fg-primary);
 }
